--- a/renovate.json
+++ b/renovate.json
@@ -1,3 +1,59 @@
 {
-  "extends": ["config:base"]
+  "extends": [
+    ":ignoreModulesAndTests",
+    ":label(renovate)",
+    ":prConcurrentLimit10",
+    ":prNotPending",
+    ":timezone(Asia/Tokyo)",
+    "group:monorepos"
+  ],
+  "npm": {
+    "extends": [
+      ":automergePatch",
+      ":noUnscheduledUpdates",
+      ":separatePatchReleases",
+      ":unpublishSafe",
+      "helpers:disableTypesNodeMajor",
+      "@teppeis:semanticPrefixFixDepsPeerChoreOthers"
+    ],
+    "schedule": ["after 9pm", "before 9am"],
+    "rangeStrategy": "bump",
+    "packageRules": [
+      {
+        "groupName": "ESLint and Prettier",
+        "packageNames": ["eslint", "prettier"],
+        "packagePatterns": ["^eslint-config-", "^eslint-plugin-"]
+      },
+      {
+        "description": "automerge minor updates of widely used libraries in devDeps",
+        "updateTypes": ["minor"],
+        "depTypeList": ["devDependencies"],
+        "automerge": true,
+        "packageNames": ["glob", "mocha", "npm-run-all", "power-assert", "rimraf", "sinon"]
+      },
+      {
+        "description": "disable package.json > engines update",
+        "depTypeList": ["engines"],
+        "enabled": false
+      }
+    ]
+  },
+  "lockFileMaintenance": {
+    "enabled": true,
+    "schedule": ["before 9am on the first day of the month"]
+  },
+  "circleci": {
+    "enabled": true,
+    "automerge": true,
+    "automergeType": "branch",
+    "schedule": ["before 9am on Friday"],
+    "semanticCommitScope": "docker",
+    "semanticCommitType": "ci",
+    "packageRules": [
+      {
+        "groupName": "Node Docker digests in CircleCI",
+        "packageNames": ["circleci/node", "node"]
+      }
+    ]
+  }
 }
