--- a/package.json
+++ b/package.json
@@ -33,12 +33,13 @@
   },
   "devDependencies": {
     "eslint": "^5.14.1",
+    "eslint-find-rules": "^3.3.1",
     "glob": "^7.1.3",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
     "mocha": "^6.0.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "1.16.4",
+    "prettier": "^1.16.4",
     "typescript": "^3.3.3333"
   },
   "peerDependencies": {
@@ -58,7 +59,13 @@
     }
   },
   "lint-staged": {
-    "*.{js,ts,tsx}": ["npm run lint:js:fix", "git add"],
-    "*.{json}":["npm run lint:json:fix","git add"]
-  }   
+    "*.{js,ts,tsx}": [
+      "npm run lint:js:fix",
+      "git add"
+    ],
+    "*.{json}": [
+      "npm run lint:json:fix",
+      "git add"
+    ]
+  }
 }
