--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-react-hooks": "^1.4.0",
-    "globals": "^11.11.0"
+    "globals": "^11.11.0",
+    "prettier": "^1.16.4"
   },
   "license": "MIT",
   "husky": {
